# mac-posture-watch

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  privacy.md
src/posture_watch/: __init__.py  calibration.py  camera.py  cli.py  config.py  detectors.py  evaluation.py  features.py  launchd.py  llm.py  models.py  notify.py  overlay.py  placement.py  runtime.py  scoring.py  setup_wizard.py  state.py  storage.py
src/posture_watch/assets/: __init__.py
tests/: test_cli.py  test_detectors.py  test_evaluation.py  test_llm.py  test_placement.py  test_scoring.py  test_setup_wizard.py  test_state.py
