[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-posture-watch"
version = "0.1.0"
description = "Local-first macOS posture monitoring CLI using OpenCV and MediaPipe."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "HuangXiZhou" }
]
keywords = ["macos", "opencv", "mediapipe", "posture", "privacy", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
]

[project.optional-dependencies]
vision = [
  "mediapipe>=0.10.14",
  "numpy>=1.26.0",
  "opencv-python>=4.9.0",
]
dev = [
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/HuangXiZhou/mac-posture-watch"
Repository = "https://github.com/HuangXiZhou/mac-posture-watch"
Issues = "https://github.com/HuangXiZhou/mac-posture-watch/issues"

[project.scripts]
posture-watch = "posture_watch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

